--- a/Core/client/public/index.html
+++ b/Core/client/public/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but Client Dev Server doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but the FlyX website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
